# firebase-rules-linter

./: .gitignore  Cargo.toml  README.md  temp.smt2  todo.md
.github/workflows/: release.yml
src/: analyser.rs  ast.rs  binder.rs  checker.rs  config.rs  formatter.rs  globals.rs  interfaces.rs  main.rs  orany.rs  parser.rs  symbol.rs  ty.rs
src/analyser/: check_expression.rs  check_function.rs  check_global_function.rs  destruct_sort.rs  lib-lite.smt2  lib-lite.smtlib2  lib.smt2  lib.smtlib2  parser.rs  solver.rs  types.rs  z3.rs
tmp/: realworld.rules
