[package]
name = "firebase-rules-linter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-rules = { path = "../tree-sitter-firebase-rules" }
tree-sitter = "0.20.10"

[build-dependencies]
cc = "*"
