[package]
name = "firebase-rules-linter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.10"
nanoid = "0.4.0"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.56"
base64 = "0.21.7"
chrono = "0.4.31"
log = "0.4.20"
env_logger = "0.11.0"
tree-sitter-rules = "0.0.1"

[build-dependencies]
cc = "*"
