[package]
name = "firebase-rules-linter"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.10"
nanoid = "0.4.0"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.56"
base64 = "0.21.7"
chrono = "0.4.31"
log = "0.4.20"
env_logger = "0.11.0"
tree-sitter-rules = "0.0.4"
tempfile = "3.9.0"
tokio = { version = "1.36.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
futures = "0.3.30"
async-recursion = "1.0.5"
indicatif = "0.17.8"
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde-inline-default = "0.2.0"
itertools = "0.12.1"
smt2parser = "0.6.1"

[build-dependencies]
cc = "*"
